# UIUC-CS598-DLH-Project

./: .envrc  .gitignore  2024-04-14-ProjectDraft.html  Project.ipynb  README.md  VIDEO_OUTLINE.md  environment.yml  pyproject.toml  requirements.txt
original/: .gitignore  HOW_TO_RUN.md  Makefile  README.md  __init__.py  build_dataset.sh  channels.py  create_ahi_csv.sh  folds.py  logging.yaml  main_nch.py  metrics.py  model_name.py  test.py  train.py
original/config/: evals.py  train.py
original/data/: __init__.py  noise_util.py  raw.py  viz.py
original/eval/: __init__.py  chan_combo.py  channels.py  correlation.py  dataframe.py  files.py  main.py  plot.py  reference_stats.py  signals_dict.py  stats.py
original/logs/: log.stderr.txt  log.stdout.txt
original/models/: models.py  transformer.py
original/results/: Transformer_CO2ECG_200-20240419-2042.txt  Transformer_CO2ECG_200-20240429-2114.txt  Transformer_CO2ECG_25-20240419-1638.txt  Transformer_CO2_200-20240419-2135.txt  Transformer_CO2_200-20240429-1800.txt  Transformer_CO2_25-20240419-1710.txt  Transformer_ECGSPO2_200-20240429-1551.txt  Transformer_ECGSPO2_200-20240429-1557.txt  Transformer_ECGSPO2_200-20240429-1611.txt  Transformer_ECGSPO2_201-20240424-1520.txt  Transformer_ECG_200-20240419-2148.txt  Transformer_ECG_200-20240429-1814.txt  Transformer_ECG_25-20240419-1717.txt  Transformer_EEGCO2ECG_200-20240420-0159.txt  Transformer_EEGCO2ECG_200-20240430-0039.txt  Transformer_EEGCO2_200-20240419-1914.txt  Transformer_EEGCO2_200-20240429-1949.txt  Transformer_EEGCO2_25-20240419-1551.txt  (+141 more)
(+1923 files in other folders)
