[tool.poetry]
name = "dlhproject"
version = "0.1.0"
description = "Aaron and Dave's DLH project for Spring 2024"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
keras = "3.1.1"
biosppy = "2.1.2"
mne = "^1.6.1"
numpy = "^1.26.4"
scipy = "1.12.0"
pandas = "^2.2.1"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
